# dadata-py

./: .gitignore  .travis.yml  =5.4  =5.4.*  CHANGELOG.md  Makefile  README.md  pyproject.toml  tox.ini
dadata/: __init__.py  asynchr.py  client.py  settings.py  sync.py
tests/: test_async.py  test_client.py  test_dadata.py  test_sync.py
