[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "dadata"
author = "Anton Zhiyanov"
author-email = "m@antonz.ru"
home-page = "https://github.com/nalgeon/dadata-py"
requires-python = ">=3.6"
description-file = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
