[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[project]
name = "dadata"
version = "25.7.0"
description = "Data cleansing, enrichment and suggestions via Dadata API"
keywords = ["dadata", "clean", "suggest", "api"]
requires-python = ">=3.9"
dependencies = [
    "httpx",
]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Source = "https://github.com/hflabs/dadata-py"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-httpx",
    "ruff",
]

[tool.ruff]
line-length = 100

[tool.uv.build-backend]
module-root = ""
